--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-router": "^7.5.1",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
