--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
+    "discord.js": "^14.20.0",
     "dotenv": "^16.5.0",
     "ldrs": "^1.1.6",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.5.0",
+    "mqtt": "^5.7.3",
+    "protobufjs": "^7.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
