--- a/New Backend/package.json
+++ b/New Backend/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "mesh_metrics_backend",
+  "name": "new-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2",
+    "mongoose": "^8.16.0",
+    "mqtt": "^5.13.1",
+    "pino": "^9.7.0",
+    "protobufjs": "^7.5.3",
     "ws": "^8.18.1"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
